fix: change name library

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radix-converter",
+  "name": "radix-converter-lib",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
