--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
+    "declaration": true, // ¡IMPORTANTE! Genera archivos .d.ts
+    "strict": true, // Habilita todas las verificaciones de tipo
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
